1999-12-06  Per Bothner  <per@bothner.com>

	* kawa.texi (Scheme types in Java):  Fix kawa.math -> gnu.math.
	(Formals):  Document NAME :: TYPE syntax (barely).

1999-11-18  Per Bothner  <per@bothner.com>

	* license.terms:  Remove.  Replaced by by ../COPYING.
	* Makefile.am (EXTRA_DIST):  Remove license.terms.

	* kawa.texi:  Some minor cleanups for texinfo-4.0.  Now always
	generate an index.
	(Ports):  Document new SRFI-6 functions (open-input-string,
	open-output-string, get-output-string ).
	(Types):  New chapter.
	(Standard Types):  Move section to new Types chapter.
	(Mangling):  New section.
	(Method operations):  Various changes.  Some text moved around.
	(License):  Updated and added explication.

1999-09-14  Per Bothner  <per@bothner.com>

	* kawa.texi (Objects and Classes):  New chapter.
	Move some old sections to the new chapter.
	Document `make' function.
	Generate index if html.  (makeinfo crashes.)

1999-09-08  Per Bothner  <per@bothner.com>

	* kawa.texi:  Describe invoke-static and class-methods.
	Remove no-longer valid disclaimer about let-syntax and letrec-syntax.

1999-09-05  Per Bothner  <per@bothner.com>

	* kawa.texi:  Document read-line.
	Note that define-alias (now) works both top-level and in functions.

1999-08-22  Per Bothner  <per@bothner.com>

	* kawa.texi:  Change Kawa mail address to sourceware.cygnus.com.

1999-08-08  Per Bothner  <per@bothner.com>

	* kawa.texi:  Add two links to Scheme tutorials.

1999-07-20  Per Bothner  <per@bothner.com>

	* kawa.texi:  Update my email address.
	Better Windows build instructions, using makekawa.bat.

1999-07-19  Per Bothner  <per@bothner.com>

	* kawa.texi:  Fix ftp addresses.
  	Change sourceware.cygnus.com to anoncvs.cygnus.com for cvs access.
	Mention where to get Cygwin.
	Move Quanties section before Logical Number Operations.
	Add some documentation (from SLib manual) on format directives.
	Document trace, untrace, system-tmpdir, make-temporary-file.
	Document --scheme and --elisp options.